--- a/01.html
+++ b/01.html
@@ -7,6 +7,7 @@
 <body>
 <div id="container">CONTAINER
 <div id="menu">MENU</div>
+<div id=”content”> <p> Treść programu </p> </div> 
 </div>
 </body>
 </html>
