--- a/01.html
+++ b/01.html
@@ -7,7 +7,8 @@
 <body>
 <div id="container">CONTAINER
 <div id="menu">MENU</div>
-<div id=”content”> <p> Treść programu </p> </div> 
+<div id=”content”> <p> Treść programu </p> 
+	<p> Ciąg dalsza programu - zmiany lokalne </p></div> 
 </div>
 </body>
 </html>
