--- a/01.html
+++ b/01.html
@@ -9,7 +9,8 @@
 <div id="menu">MENU</div>
 <div id=”content”> <p> Treść programu </p> 
 	<p> Ciąg dalsza programu - zmiany lokalne </p>
-	<p> Ciąg dalsza programu - zmiany zdalne na serwerze </p> </div> 
+	<p> Ciąg dalsza programu - zmiany zdalne na serwerze </p>
+	</div> 
 </div>
 </body>
 </html>
